<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_spell_grou"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bg"
    android:orientation="vertical">

    <include layout="@layout/v3_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/spell_group_flow_bg" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding15"
        android:paddingRight="@dimen/padding20">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开团:   "
                android:textColor="@color/color_red"
                android:textSize="@dimen/size12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spell_group_open_group_info"
                android:textColor="@color/color_666"
                android:textSize="@dimen/size12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="参团:   "
                android:textColor="@color/color_red"
                android:textSize="@dimen/size12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spell_group_join_group_info"
                android:textColor="@color/color_666"
                android:textSize="@dimen/size12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="开奖:   "
                android:textColor="@color/color_red"
                android:textSize="@dimen/size12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spell_group_open_prize_info"
                android:textColor="@color/color_666"
                android:textSize="@dimen/size12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="抽奖拼团失败:   "
                android:textColor="@color/color_red"
                android:textSize="@dimen/size12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spell_group_open_group_error_info"
                android:textColor="@color/color_666"
                android:textSize="@dimen/size12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin15"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="退款:   "
                android:textColor="@color/color_red"
                android:textSize="@dimen/size12" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spell_group_refund_info"
                android:textColor="@color/color_666"
                android:textSize="@dimen/size12" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
